--- a/0.0.Introduccion3D.md
+++ b/0.0.Introduccion3D.md
@@ -9,8 +9,8 @@
 
 El proceso es siempre muy parecido, y lo repetiremos a lo largo del curso varias veces:
 
-1.  Partimos de un diseño que o bien hemos creado u obtenido de internet.
-2.  Generamos a partir de ese diseño un fichero de malla de puntos que denominamos fichero STL.Este fichero contiene un modelo simplificado del original.
-3. Usando un programa que llamamos laminador convertimos este fichero de malla de puntos en un conjunto de instrucciones para nuestro  modelo  concreto de impresora
-4. La impresora se encarga de ejecutar ese conjunto de instrucciones generando el objeto físico
+1.  Partimos de un **diseño** que o bien hemos creado u obtenido de internet.
+2.  Generamos a partir de ese diseño un fichero de malla de puntos que denominamos fichero **STL** u **OBJ**.Este fichero contiene un modelo simplificado del original.
+3. Usando un programa que llamamos **laminador** convertimos este fichero de malla de puntos en un conjunto de instrucciones para nuestro modelo  concreto de impresora que será un fichero **GCODE**.
+4. La impresora se encarga de ejecutar ese conjunto de instrucciones generando el **objeto físico**.
 
