--- a/0.5.GuiaRapida.md
+++ b/0.5.GuiaRapida.md
@@ -4,10 +4,12 @@
 
 ![proceso impresión](./images/20-best-3d-printing-software-tools-all-are-free.png)
 
-* Descargamos modelo (fichero **STL**) de Tinkercad.com o de thingiverse.com
-![DownloadSTL](./images/DownloadSTL.png)
-![DownloadThingiverse](./images/DownloadThingiverse.png
+* Descargamos modelo (fichero **STL** o **OBJ**) de Tinkercad.com o de thingiverse.com
+![Descargamos el fichero STL](./images/DownloadSTL.png)
+
+![Descargamos desde Thingiverse](./images/DownloadThingiverse.png
 )
+
 * Descargamos el programa laminador [Ultimaker Cura](https://ultimaker.com/es/software)
 
 * Configuramos los parámetros de la impresión: 
