--- a/1.0.ProcesoImpresion3D.md
+++ b/1.0.ProcesoImpresion3D.md
@@ -11,7 +11,7 @@ El Proceso de impresión consiste siempre en los mismos pasos:
 
 ![](./images/20-best-3d-printing-software-tools-all-are-free.png)
 
-##### MODELO (exportación)-> STL (laminador)-> GCode -> Impresora
+##### MODELO (exportación)-> STL/OBJ (laminador)-> GCode -> Impresora
 
 [![Vídeo: 1.0 Proceso de impresión 3D](https://img.youtube.com/vi/qP4qwX_k7ag/0.jpg)](https://drive.google.com/file/d/19V8opZFFsoWpD34MG_kkph5Mw0ElxjDq/view?usp=sharing)
 
