--- a/3.1.Cura.md
+++ b/3.1.Cura.md
@@ -1,10 +1,10 @@
 ## [Ultimaker Cura](https://ultimaker.com/en/products/ultimaker-cura-software)
 
-![ultimakerCura](./images/ultimakerCura.jpeg)
+![Laminador Ultimaker Cura](./images/ultimakerCura.jpeg)
 
 [Ultimaker Cura](https://ultimaker.com/en/products/ultimaker-cura-software) es un software open source totalmente gratuito, disponible para Windows, MacOS y Linux, que podemos descargar de la página del fabricante de impresoras Ultimaker.
 
-La instalación es muy sencilla. En caso de que no pudiéramos instalar la última versión disponible (quizás por no tener actualizado nuestros sistema operativo), podemos encontrar versiones más antiguas para probar si funcionan.
+La instalación es muy sencilla. En caso de que no pudiéramos instalar la última versión disponible (quizás por no tener actualizado nuestro sistema operativo), podemos encontrar versiones más antiguas para probar si funcionan.
 
 Vamos a ver cómo se usa Ultimaker Cura, lo utilizaremos con una pieza sencilla, haciendo todo el proceso hasta generar el fichero gcode que enviaremos a nuestra impresora
 
@@ -64,9 +64,9 @@ Entre ellos encontramos:
 
 * Otro parámetro fundamental es la **adherencia** que nos va a permitir que nuestra pieza quede bien fijada la base para que no se mueva en toda la impresión el caso en el que se moviera y se desplazará el resultado sería que algunas de las capas no irían encima de las que debieran con la consiguiente pérdida de esa pieza. Para ello también se generará una parte imprimible artificial que añadir a firmeza a la unión entre la pieza y la base
 
-En este nivel de configuración por defecto, algunos de estos parámetros son demasiado simples y solamente podemos configurar si están activos o no. ;ás adelante veremos cómo podemos modificar todas estos parámetros para conseguir un mayor detalle y control en la configuración.
+En este nivel de configuración por defecto, algunos de estos parámetros son demasiado simples y solamente podemos configurar si están activos o no. Más adelante veremos cómo podemos modificar todas estos parámetros para conseguir un mayor detalle y control en la configuración.
 
-Una vez configurado estos parámetros pulsaremos en el botón azul de segmentación, abajo a la derecha, para proceder al laminado tras terminar este proceso se nos indicará el tiempo estimado de impresión así como el peso de la pieza.  habitualmente el tiempo de impresión suele ser mayor del que Cura nos muestra:
+Una vez configurado estos parámetros pulsaremos en el botón azul de **Segmentación** (laminar), abajo a la derecha, para proceder al laminado tras terminar este proceso se nos indicará el tiempo estimado de impresión así como el peso de la pieza.  habitualmente el tiempo de impresión suele ser mayor del que Cura nos muestra:
 
 ![Tiempo y peso de impresión](./images/CuraTiempoLaminacion.png)
 
@@ -76,7 +76,7 @@ Veremos que existen distintos tipos de impresión que aparecen indicados con dif
 
 Tras este proceso podremos exportar el fichero gcode generado a nuestra tarjeta SD y ya estará listo para imprimirlo desde nuestra impresora.
 
-![Resultado de lal laminación](./images/CuraResuladoLaminacion.png)
+![Resultado de la laminación](./images/CuraResuladoLaminacion.png)
 
 En este punto conviene que revisemos bien por si se hubiera producido algún error. A veces algunos modelos contienen errores que dan lugar a que el laminado no sea correcto .
 
@@ -86,14 +86,45 @@ En este punto conviene que revisemos bien por si se hubiera producido algún err
 
 [Vídeo: 3.1 Uso de Ultimaker Cura como laminador (slicer) para impresión 3D](https://drive.google.com/file/d/1GNLk_aC2KNEUU8TfVeIBl4H5B1NB5IfW/view?usp=sharing)
 
-Vamos a usar ahora Cura para hacer el laminado de una pieza más compleja que sí necesita de soporte y de adherencia. Se trata de un [diseño sencillo](https://www.tinkercad.com/things/fBWb6qL99yO) que copia al conocido personaje del juego "Among Us". Si todavía no tienes cuenta en [Tinkercad](https://www.tinkercad.com), puedes descargar el fichero STL [desde aquí]()
+Vamos a usar ahora Cura para hacer el laminado de una pieza más compleja que sí necesita de soporte y de adherencia. Se trata de un [diseño sencillo](https://www.tinkercad.com/things/fBWb6qL99yO) que copia al conocido personaje del juego "Among Us". Si todavía no tienes cuenta en [Tinkercad](https://www.tinkercad.com), puedes descargar el fichero STL [desde aquí](https://github.com/javacasm/Curso3D/raw/main/modelos/Amon%20Us%20Clone.stl).
 
 Veremos el resultado impreso y lo compararemos con el que nos mostraba Cura en la previsualización
 
+Al cargar el modelo en Cura, vemos como el laminador nos resalta algunas partes en rojo, son aquellas en las que se recomienda utilizar soporte, es decir, de imprimirla tal cual pueden descolgarse dando lugar a una impresión defectuosa.
+
+![Modelo de AmongUs cargado en Cura](./images/CuraAmongUs.png)
+
+También vemos fácilmente si la superficie en la que el modelo toca a la base de la impresora es suficiente o no para una adherencia firme.  en caso contrario podemos activar la opción de adherencia.
+
+
+Al cargar el modelo, Seleccionar la herramienta de cambio de tamaño,  aparecen las características físicas del modelo, es decir, su tamaño dando sus  dimensiones en los tres ejes. 
+
+
+![CuraTamanioModelo](./images/CuraTamanioModelo.png)
+
+Podemos aprovechar para configurar un tamaño adecuado para que la duración de la impresión no sea excesiva
+
+
+Procedemos ahora a laminar pulsando el botón **Segmentación** y veremos en la **Vista Previa** el resultado dónde se apreciará en color azul claro la parte del soporte y de mejora de la adherencia.
+
+![Laminado con Soportes en Cura](./images/CuraLaminadoSoportes.png)
+
+Moviéndonos por las diferentes capas veremos como el material de soporte sostiene a las capas superiores y el material de adherencia amplía  la zona de contacto entre la base y la pieza.
+
+Tras un buen rato de impresión, obtenemos la pieza impresa,  eliminamos la parte de adherencia, que es una capa muy fina y nos quedamos con la pieza y el soporte que forman un todo. 
+
+![AmongUs impreso con con soporte](./images/AmongUsConSoporte.jpg)
+
+Con cuidado hacemos presión en la separación entre ambas utilizando un destornillador fino o una espátula.   Iremos haciendo movimientos para separarlo poco a poco
+
+Al separarlos vemos que la parte superior del soporte no es maciza sino que tiene 1 hueco para así no adherirse demasiado a nuestra pieza.  
+
+
+![Pieza y soporte ya separados](./images/AmongUsConSoporteSeparados.jpg)
+
+Si nos fijamos en la parte donde el soporte estaba  adherido a la pieza, la calidad no es tan buena como en el resto de nuestra impresión, pero aún así es mejor de la tendríamos sin utilizar soporte.
 
 [![Vídeo: 3.1.3 Usamos Cura con una pieza más compleja que necesita de soporte y de adherencia](https://img.youtube.com/vi/XUQR765Wtf0/0.jpg)](https://drive.google.com/file/d/1rqcAdbqtt6Sq_UtRCHHPHmJmMkXrSUk6/view?usp=sharing)
 
 [Vídeo: 3.1.3 Usamos Cura con una pieza más compleja que necesita de soporte y de adherencia](https://drive.google.com/file/d/1rqcAdbqtt6Sq_UtRCHHPHmJmMkXrSUk6/view?usp=sharing)
-
-
 
