--- a/3.7.soportes.md
+++ b/3.7.soportes.md
@@ -1,12 +1,13 @@
-## Soportes
+## Diferencias entre laminadores
 
-Diferente comportamiento del soporte entre PrusaSlicer y Cura
-
-[![Video: Diferente comportamiento del soporte entre PrusaSlicer y Cura](https://img.youtube.com/vi/vM-f9cYLb6Y/0.jpg)](https://youtu.be/vM-f9cYLb6Y)
-
-Soportes tipo árbol
-
-Mostrar imagen de cómo se ven desde prusaslicer
+En este vídeo vamos a ver la diferencia de resulado y el diferente comportamiento que tienen los dos laminadores con los que hemos trabajado ante una pieza compleja.
 
 
-Cómo retirar los soportes
+Por esto es importante que comparemos resultados antes de lanzar una impresión.
+
+[![Video: Diferente comportamiento del soporte entre PrusaSlicer y Cura](https://img.youtube.com/vi/vM-f9cYLb6Y/0.jpg)](https://drive.google.com/file/d/1b0-lnVi-bUEnf7eUHmMj0q0U-ipcUtnZ/view?usp=sharing)
+
+
+[Video: Diferente comportamiento del soporte entre PrusaSlicer y Cura](https://drive.google.com/file/d/1b0-lnVi-bUEnf7eUHmMj0q0U-ipcUtnZ/view?usp=sharing)
+
+
