--- a/6.2.PrusaSlicer_v2.md
+++ b/6.2.PrusaSlicer_v2.md
@@ -1,4 +1,15 @@
 
 Excelente [documentción de Prusa Slicer](https://help.prusa3d.com/es/article/informacion-general_1910) ¡y en Español!
 
-[Tutorial sobre Prusa Slicer         de los expertos de bitfab.io](https://bitfab.io/es/blog/prusa-slicer/)
+
+
+[Documentación](http://imprimalia3d.com/recursosimpresion3d/gu-configuraci-n-par-metros-slic3r)
+
+[Tutorial de los expertos de bitfab.io](https://bitfab.io/es/blog/prusa-slicer/)
+
+
+[Problemas con las dimensiones](https://manual.slic3r.org/troubleshooting/dimension-errors)
+
+
+
+
