--- a/6.3.Proyectos3D.md
+++ b/6.3.Proyectos3D.md
@@ -33,3 +33,6 @@ Juntando piezas de las mismas características
 Guardar proyectos con cura y prusaslicer
 
 repeticiones de impresiones 
+
+
+## Cohete de Tintin
