--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -6,7 +6,9 @@
 
 Vamos a hacer un recorrido sobre diferentes repositorios de modelos desde los que podemos descargar ficheros para imprimir.
 
+En estos repositorios vamos a encontrar todo tipo de diseños, que se habrán realizado con diferentes programas de diseño. Pero la mayoría de ellos tendrán un fichero de malla de puntos de tipo STL o de tipo OBJ que vamos a poder utilizar para imprimir.   En el caso en el que el fichero estuviera en otro formato vamos a  necesitar convertirlo a uno de estos dos formatos. Esto lo podremos hacer en la mayoría de los software de diseño donde siempre va a asistir una opción de exportación a formato STL o formato OBJ. 
 
+Puesto que existen diferentes técnicas de diseño no todos los modelos son aptos para imprimirse.  Algunos de ellos, a pesar de que tengan un aspecto excelente, incluyen en su estructura pequeños agujeros o fisuras. En el proceso de laminado, el programa laminador cometerá errores  al generar las capas y  nos desaconsejará su impresión.
 
 Existen muchos, y seguro que algunos se quedan en el tintero, no dudes en comentar si echas alguno en falta.
 
@@ -27,7 +29,6 @@ Por ejemplo si [buscamos "Leonardo" podemos encontrar muchos diseños relacionad
 Entre los resultados vemos que hay [diseños relacionados](https://www.thingiverse.com/thing:3693906)  y muy interesantes
 
 ![Bicicleta de Leonardo](./images/biciLeonardo.jpg)
-
 
 Y otros que en principio no tienen nada que ver... nos ocurre un poco como nos pasa cuando buscamos en Internet, que hay un poco de todo.
 
