--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -4,7 +4,7 @@ El **laminado** es el proceso por el cual convertimos nuestro modelo 3D, normalm
 
 Existen varios laminadores en el mercado, nosotros nos vamos a centrar en aquellos que son gratuitos y de código abiertos. Vamos a hablar de Ultimaker Cura y de Prusa Slicer. Son sin duda dos de los más utilizados y desde luego algunos de los más avanzados que existen actualmente.
 
-![Ejemplo de uso de laminador PrusaSlicer donde se ve la estructra de las capas](./images/prusaslicer.jpg)
+![Ejemplo de uso de laminador PrusaSlicer donde se ve la estructura de las capas](./images/prusaslicer.jpg)
 
 En la imagen podemos ver el resultado de un proceso de laminación, en el que ya se ha organizado una estructura interna de la pieza, donde se muestran las distintas características que tendrá la impresión. Vemos que hay una parte externa reforzada para que la pieza tenga fuerza (**perímetros**) y al mismo tiempo tenemos una parte interior que se ha aligerado para ahorrar filamento y tiempo de impresión (es lo que se llama el **relleno**).
 
