--- a/3.2.PrusaSlicer.md
+++ b/3.2.PrusaSlicer.md
@@ -2,7 +2,7 @@
 
 La empresa Prusa Research (la de las impresoras Prusa)  está al frente del desarrollo del software de laminación PrusaSlicer. En mi opinión es la mejor opción a día de hoy para comenzar el mundo de la impresión 3D.
 
-![prusa slicer](./images/prusaslicer-starts-in-the-3d-editor-view-malolo-via-prusaprinters-200831_download.jpg)
+![Laminador PrusaSlicer](./images/prusaslicer-starts-in-the-3d-editor-view-malolo-via-prusaprinters-200831_download.jpg)
 
 
 Instalamos el software de laminación PrusaSlicer que podemos descargar desde su [página web](https://www.prusa3d.es/prusaslicer/)
@@ -20,22 +20,23 @@ Una vez lo abrimos no encontramos con que tiene las partes a las que estamos aco
 
 Lo primero que haremos será configurar nuestra impresora.  podemos tener varias impresoras configuradas y en cada momento elegir cuál de ellas queremos usar. Por defecto nos muestra la impresora de la de su marca cómo era de esperar:
 
-![ConfiguracionImpresoraPrusaSlicer](./images/ConfiguracionImpresoraPrusaSlicer.png)
+![Configuración de Impresora de marca Prusa](./images/ConfiguracionImpresoraPrusaSlicer.png)
 
 También podemos elegir entre impresoras de algunas marcas. No están todas pero sí las más utilizadas últimamente. Cada actualización añade nuevas marcas y modelos.
 
 Podemos utilizar el asistente y añadir nueva impresora en cualquier momento,  desde la pestaña de configuración de impresoras.
 
-![ConfiguracionImpresoraOtrasPrusaSlicer](./images/ConfiguracionImpresoraOtrasPrusaSlicer.png)
+![Configuración Impresora de otras marcas](./images/ConfiguracionImpresoraOtrasPrusaSlicer.png)
 
 En el caso de que nuestra impresora no esté, siempre podemos configurar una impresora por defecto. Para ello tenemos que seleccionar algunos detalles que podemos encontrar en la documentación del fabricante:
+
 *  El modelo del firmware,  que normalmente será Marlin
 *  El tamaño de la zona de impresión que suele ser de 200 x 200 mm
 *  El diámetro del orificio de la boquilla que suele ser 0,4 mm
 *  El diámetro del filamento que suele ser 1.75 mm
 
 
-![ConfiguracionImpresoraPersonalizaaPrusaSlicer](./images/ConfiguracionImpresoraPersonalizaaPrusaSlicer.png)
+![Configuración de Impresora personalizada](./images/ConfiguracionImpresoraPersonalizaaPrusaSlicer.png)
 
 El asistente también nos solicitará que seleccionemos los filamentos que solemos utilizar indicando por defecto aquello que se llaman “genéricos” que no son propiamente de ninguna marca.
 
@@ -45,13 +46,13 @@ El asistente también nos solicitará que seleccionemos los filamentos que solem
 
 [Vídeo: 3.2.0 Instalación y 1ª configuración de PrusaSlicer](https://drive.google.com/file/d/1-wFyfeIlgSU-dWifCABHxpeCfEjlRg_w/view?usp=sharing)
 
-
+## Primer laminado con PrusaSlicer
 
 Una vez configurado nuestra impresora y los principales parámetros vamos a hacer un ejemplo de impresión utilizando un clásico de la impresión 3D: [3D Benchy](https://www.thingiverse.com/thing:763622)
 
 
 
-![3DBenchy.jpeg](./images/3DBenchy.jpeg)
+![3DBenchy](./images/3DBenchy.jpeg)
 
 Se trata de un modelo muy utilizado para comparar los resultados entre distintas impresoras y para asegurarnos que tenemos una buena configuración. Ha sido diseñado teniendo en mente aquellos apartados más difíciles de imprimir para así poder ajustar nuestros parámetros y obtener una calidad óptima de impresión.  por ejemplo dispone de agujero dentro de su estructura de elementos que están volando  y que nos permiten probar si nuestra configuración es apta para los diseños más exigentes.
 
@@ -105,6 +106,8 @@ Pulsando sobre la barra vertical que hay a la derecha de la imagen laminada pode
 
 [![Vídeo: 3.2.1 Primera Impresión con PrusaSlicer](https://img.youtube.com/vi/pgss1mtXL44/0.jpg)](https://drive.google.com/file/d/1ELWn36m3yjUkVO2JFTr1BhotZxoJ7hvt/view?usp=sharing)
 
+[Vídeo: 3.2.1 Primera Impresión con PrusaSlicer](https://drive.google.com/file/d/1ELWn36m3yjUkVO2JFTr1BhotZxoJ7hvt/view?usp=sharing)
+
 ## Ajustando la altura de capa
 
 Vamos a crear ahora un nuevo perfil de impresión en el que la altura de capa será de 0.1mm y  aprovecharemos para comparar el resultado de la calidad de uno y otro.
@@ -117,7 +120,7 @@ Vamos a utilizar el Asistente de Altura de Capa: es un complemento que incluye P
 
 Lo activaremos desde la vista de modelo pulsando sobre el icono de “Altura de Capa Variable”
 
-![Asistente de Altura de Capa VariablePS](./images/AlturaCapaVariablePS.png)
+![Asistente de Altura de Capa Variable](./images/AlturaCapaVariablePS.png)
 
 Tras ejecutarlo veremos como nos aparece un diagrama en el que se indica la altura de capa óptima para cada una de las zonas. En este ejemplo en particular vemos como en la parte de arriba de la chimenea establece una altura de capa de 0.3mm mientras que en el resto aconseja una altura de capa de 0,07mm inferior al 0,1 que habíamos estimado.
 
@@ -129,9 +132,11 @@ Por tanto en este caso la recomendación del asistente para que la impresión se
 [![Vídeo: 3.2.2 Cambio de altura de capa con PrusaSlicer](https://img.youtube.com/vi/SJVG5wEWg4c/0.jpg)](https://drive.google.com/file/d/1p2ax9X2wVEu7UHvu6VMZW_Dc4uZefYOV/view?usp=sharing)
 
 
+[Vídeo: 3.2.2 Cambio de altura de capa con PrusaSlicer](https://drive.google.com/file/d/1p2ax9X2wVEu7UHvu6VMZW_Dc4uZefYOV/view?usp=sharing)
+
 ## Comparación de los resultados
 
-![Comparaion de Calidad 0.3 y 0.1](./images/ComparaionCalidadPS.png)
+![Comparación de Calidad entre  0.3 y 0.1mm de altura de capa](./images/ComparaionCalidadPS.png)
 
 Hemos hecho 2 impresiones con diferente  altura de capa: una de 0,1mm y otra de 0,3mm.  En la imagen se ve perfectamente la diferencia: el que está más atrás, que tiene una altura de capa de 0,3, tiene como unos escaloncitos, mientras que el que está en un primer plano se le ve mucho más suave. 
 
@@ -143,4 +148,6 @@ Pero eso lo disfrutemos en cada uno de los casos.
 
 [![Vídeo: 3.2.3 Comparación de impresiones con diferente altura de capa con PrusaSlicer](https://img.youtube.com/vi/cfwIWVXHCg8/0.jpg)](https://drive.google.com/file/d/1YjNU7CbCOkaLs3kTJfpYk3Ehf4T1Zxfa/view?usp=sharing)
 
+
+[Vídeo: 3.2.3 Comparación de impresiones con diferente altura de capa con PrusaSlicer](https://drive.google.com/file/d/1YjNU7CbCOkaLs3kTJfpYk3Ehf4T1Zxfa/view?usp=sharing)
 
