--- a/3.7.soportes.md
+++ b/3.7.soportes.md
@@ -1,6 +1,6 @@
 ## Diferencias entre laminadores
 
-En este vídeo vamos a ver la diferencia de resulado y el diferente comportamiento que tienen los dos laminadores con los que hemos trabajado ante una pieza compleja.
+En este vídeo vamos a ver la diferencia de resultado y el diferente comportamiento que tienen los dos laminadores con los que hemos trabajado ante una pieza compleja.
 
 
 Por esto es importante que comparemos resultados antes de lanzar una impresión.
