--- a/PublicacionBase/4.Ejercicio.md
+++ b/PublicacionBase/4.Ejercicio.md
@@ -1,1 +1,7 @@
+# Tema 4. Estructura y modelos de Impresoras 3D
+
+## Ejercicios
+
 Aprender a montar una impresora 3D
+
+Escribe tu explicación en un documento aparte y envíalo al profesor
