--- a/4.2.Montaje.Kingroon_KP3s.md
+++ b/4.2.Montaje.Kingroon_KP3s.md
@@ -7,12 +7,12 @@ El montaje de la impresora quien room kp13 es muy sencillo:
 
 El cableado viene completamente hecho, además de excelentemente protegido
 
-![Cableado](./images/cableado.jpg)
+![Cableado](./images/KP3s_cableado.jpg)
 
 
 Lo único que tenemos que hacer es conectar el eje z colocarlo en el hueco que viene dispuesto para ello.
 
-![Montaje 1](./images/KP3s_montaje0_2.jpg)
+![Montaje 1](./images/KP3s_montaje0_2_s.jpg)
 
 ![Montaje ](./images/KP3s_montaje1.jpg)
 
