--- a/6.5.MejoraCalidad.md
+++ b/6.5.MejoraCalidad.md
@@ -10,7 +10,7 @@
 
 [3dBenchy](https://www.thingiverse.com/thing:763622)
 
-![3DBenchy](./images/1_3D-printed_3DBenchy_by_Creative-Tools.com_preview_card.jpeg)
+![3DBenchy](./images/3DBenchy.jpeg)
 
 ## Pruebas
 
