--- a/4.1.5.Kingroon_KP3s.md
+++ b/4.1.5.Kingroon_KP3s.md
@@ -6,30 +6,30 @@
 
 Es una impresora ideal cuando tienes pocos espacio y la superficie de impresión es de 180 x 180mm. El único pero es que el ventilador del extrusor es muy ruidoso
 
-![Ocupa poco espacio](./images/PocoEspacio.jpg)
+![Ocupa poco espacio](./images/KP3s_PocoEspacio.jpg)
 
 Me gusta mucho la calidad de la impresora KingRoon KP3s  porque viene perfectamente cableada, los cables están muy bien protegidos y además incluye una cinta que nos permiten hacer que el tubito para el filamento se adapte perfectamente a la posición de nuestro rollo de filamento.
 
 El diseño es bastante elegante y robusto
 
-![Finales de carrera](./images/FinalesCarrera.jpg)
+![Finales de carrera](./images/KP3s_FinalesCarrera_s.jpg)
 
 Tiene una estructura muy sólida basada en T-slot e incluye guías lineales
 
-![Guía Lineal eje Y](./images/GuiaLineaY.jpg)
-![Guía Lineal eje Y](./images/GuiaLinealX.jpg)
+![Guía Lineal eje Y](./images/KP3s_GuiaLineaY_s.jpg)
+![Guía Lineal eje Y](./images/KP3s_GuiaLinealX_s.jpg)
 
 También incluye repuestos, unos metros de filamento y todas las herramientas necesarias para el montaje y uso.
 
-![](./images/repuestos.jpg)
-![](./images/Herramientas.jpg)
+![](./images/KP3s_repuestos.jpg)
+![](./images/KP3s_Herramientas.jpg)
 
 ![](https://ae01.alicdn.com/kf/H08ccf98c87c349fb82fade2516dae9c7Z/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
 
 ![](https://ae01.alicdn.com/kf/H06705d905ff547d89f1bec9d4a07b8d9A/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
 
 
-![Contenido de la caja](./images/Contenido.jpg)
+![Contenido de la caja](./images/KP3s_Contenido_s.jpg)
 
 Zona de impresión : 180 x 180 x 180mm
 Resolución de impresión: 0,05 - 0,3mm
@@ -38,7 +38,7 @@ Fuente de alimentación: 24V 15A 360W
 
 Tiene un extrusor directo que viene completamente montado
 
-![Extrusor](./images/Extrusor.jpg)
+![Extrusor](./images/KP3s_Extrusor_s.jpg)
 
 
 ## Referencias
