--- a/4.1.5.Kingroon_KP3s.md
+++ b/4.1.5.Kingroon_KP3s.md
@@ -6,7 +6,7 @@
 
 Es una impresora ideal cuando tienes pocos espacio y la superficie de impresión es de 180 x 180mm. El único pero es que el ventilador del extrusor es muy ruidoso
 
-![Ocupa poco espacio](./images/KP3s_PocoEspacio.jpg)
+![Ocupa poco espacio](./images/KP3s_PocoEspacio_s.jpg)
 
 Me gusta mucho la calidad de la impresora KingRoon KP3s  porque viene perfectamente cableada, los cables están muy bien protegidos y además incluye una cinta que nos permiten hacer que el tubito para el filamento se adapte perfectamente a la posición de nuestro rollo de filamento.
 
@@ -21,12 +21,12 @@ Tiene una estructura muy sólida basada en T-slot e incluye guías lineales
 
 También incluye repuestos, unos metros de filamento y todas las herramientas necesarias para el montaje y uso.
 
-![](./images/KP3s_repuestos.jpg)
-![](./images/KP3s_Herramientas.jpg)
+![](./images/KP3s_repuestos_s.jpg)
+![](./images/KP3s_Herramientas_s.jpg)
 
-![](https://ae01.alicdn.com/kf/H08ccf98c87c349fb82fade2516dae9c7Z/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
+![](./images/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
 
-![](https://ae01.alicdn.com/kf/H06705d905ff547d89f1bec9d4a07b8d9A/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
+![](./images/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
 
 
 ![Contenido de la caja](./images/KP3s_Contenido_s.jpg)
@@ -44,3 +44,4 @@ Tiene un extrusor directo que viene completamente montado
 ## Referencias
 
 [Review detallada](https://3dprintbeginner.com/kingroon-kp3s-review/)
+
