--- a/4.2.Montaje.Kingroon_KP3s.md
+++ b/4.2.Montaje.Kingroon_KP3s.md
@@ -3,35 +3,35 @@
 
 El montaje de la impresora quien room kp13 es muy sencillo:
 
-![Montaje 1](./images/KP3s_montaje0.jpg)
+![Montaje 1](./images/KP3s_montaje0_s.jpg)
 
 El cableado viene completamente hecho, además de excelentemente protegido
 
-![Cableado](./images/KP3s_cableado.jpg)
+![Cableado](./images/KP3s_cableado_s.jpg)
 
 
 Lo único que tenemos que hacer es conectar el eje z colocarlo en el hueco que viene dispuesto para ello.
 
 ![Montaje 1](./images/KP3s_montaje0_2_s.jpg)
 
-![Montaje ](./images/KP3s_montaje1.jpg)
+![Montaje ](./images/KP3s_montaje1_s.jpg)
 
 Fijarlo con unos tornillos por la parte de abajo 
 
-![Montaje ](./images/KP3s_montaje2.jpg)
+![Montaje ](./images/KP3s_montaje2_s.jpg)
 
 Colocamos el adaptar del motor y el husillo, atornillando la parte más estrecha del lado del motor
 
-![Montaje ](./images/KP3s_montaje3.jpg)
+![Montaje ](./images/KP3s_montaje3_s.jpg)
 
 Colocamos el usillo pasándolo por la rosca brazo X
 
 
-![Montaje ](./images/KP3s_montaje4.jpg)
+![Montaje ](./images/KP3s_montaje4_s.jpg)
 
 Y atornillamos el adaptador
 
-![Montaje ](./images/KP3s_montaje5.jpg)
+![Montaje ](./images/KP3s_montaje5_s.jpg)
 
 
 Y una vez que lo hemos terminado de colocar calibrar la impresora se puede realizar todo el trabajo en menos de 10 minutos
